[gd_scene load_steps=5 format=3 uid="uid://bvceo2m3god6e"]

[ext_resource type="Script" path="res://leaderboard/Leaderboard.gd" id="1_hcatr"]
[ext_resource type="Theme" uid="uid://khgcs3srjs2a" path="res://theme.tres" id="2_42ytn"]
[ext_resource type="Texture2D" uid="uid://dkmyb0xf0t6a2" path="res://tempAssets/32x32-cube.png" id="2_s7ard"]
[ext_resource type="Script" path="res://ButtonSound.gd" id="4_1kuph"]

[node name="Leaderboard" type="CanvasLayer"]
script = ExtResource("1_hcatr")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.0941176, 0, 0.0784314, 1)
position = Vector2(951, 406)
scale = Vector2(15.7188, 12.75)
texture = ExtResource("2_s7ard")

[node name="LeaderboardTitle" type="Label" parent="."]
offset_left = 716.0
offset_top = 109.0
offset_right = 971.0
offset_bottom = 148.0
theme = ExtResource("2_42ytn")
theme_override_colors/font_color = Color(0.972549, 0.760784, 0.133333, 1)
theme_override_font_sizes/font_size = 24
text = "Leaderboard"

[node name="LeaderboardContent" type="Label" parent="."]
offset_left = 715.0
offset_top = 211.0
offset_right = 1189.0
offset_bottom = 602.0
theme = ExtResource("2_42ytn")
text = "Load Leaderboard to see top times"

[node name="PlayerIdTitle" type="Label" parent="."]
offset_left = 717.0
offset_top = 163.0
offset_right = 871.0
offset_bottom = 186.0
theme = ExtResource("2_42ytn")
text = "Player Id - "

[node name="PlayerIdValue" type="Label" parent="."]
offset_left = 880.0
offset_top = 163.0
offset_right = 1010.0
offset_bottom = 202.0
theme = ExtResource("2_42ytn")
text = "Loading..."

[node name="SubmitTimeButton" type="Button" parent="."]
offset_left = 819.0
offset_top = 611.0
offset_right = 1133.0
offset_bottom = 709.0
scale = Vector2(1, 0.934526)
theme = ExtResource("2_42ytn")
text = "Submit  Time"
script = ExtResource("4_1kuph")

[connection signal="mouse_entered" from="SubmitTimeButton" to="SubmitTimeButton" method="_on_mouse_entered"]
[connection signal="pressed" from="SubmitTimeButton" to="." method="_upload_score"]
[connection signal="pressed" from="SubmitTimeButton" to="SubmitTimeButton" method="_on_pressed"]
